# poggles

./: .clang-format  .editorconfig  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py  dependencies.json  pyproject.toml
.github/workflows/: ci.yml  merge-back.yml  version-bump.yml
cmake/: dependencies.cmake  install-config.cmake  install-rules.cmake  poggles_targets.cmake  targets.cmake  variables.cmake
include/poggles/: buffer.h  debug.h  framebuffer.h  gl_function.h  gltype_definitions.h  gltypes.h  handle.h  poggles.hpp  program.h  shader.h  stb_image.h  texture.h  vertex_array.h
include/poggles/glad/: glad.h
source/: gl_function.cpp  poggles.cpp
source/poggles/: buffer.cpp  debug.cpp  framebuffer.cpp  gl_function.cpp  glad.c  program.cpp  shader.cpp  stb_image.cpp  texture.cpp  vertex_array.cpp
test/: CMakeLists.txt
test/source/: poggles_test.cpp  shader_tests.hpp
